Update GitHub username

--- a/src/index.html
+++ b/src/index.html
@@ -64,10 +64,10 @@
     <footer class="footer">
       This page was made by
       <a
-        href="https://github.com/ErreurDeSyntaxe"
+        href="https://github.com/whatsacaptcha"
         class="footer-link"
         target="_blank"
-        >ErreurDeSyntaxe</a
+        >Xavier Bertrand</a
       >
       in the context of The Odin Project's Full Stack
       <a
